; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/sh/rcar/extr_core.c_rsnd_io_is_working.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/sh/rcar/extr_core.c_rsnd_io_is_working.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rsnd_dai_stream = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rsnd_io_is_working(%struct.rsnd_dai_stream* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rsnd_dai_stream*, align 8
  store %struct.rsnd_dai_stream* %0, %struct.rsnd_dai_stream** %3, align 8
  %4 = load %struct.rsnd_dai_stream*, %struct.rsnd_dai_stream** %3, align 8
  %5 = getelementptr inbounds %struct.rsnd_dai_stream, %struct.rsnd_dai_stream* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load %struct.rsnd_dai_stream*, %struct.rsnd_dai_stream** %3, align 8
  %10 = getelementptr inbounds %struct.rsnd_dai_stream, %struct.rsnd_dai_stream* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = call i32 @snd_pcm_running(i64 %11)
  store i32 %12, i32* %2, align 4
  br label %14

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %14

14:                                               ; preds = %13, %8
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @snd_pcm_running(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
